# factorio-mod-settings-converter

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml  release.yml
src/: main.rs
tests/: integration_test.rs
